# july19_hackathon

./: Dockerfile  Example_how_to_use_Formalyzer.html  Example_survey.html  Formalyzer Agent Design.docx  README.md  server.py
hackathon-agent/: .dockerignore  .env.example  README.md  pyproject.toml
hackathon-agent/hackathon_agent/: agent.py
hackathon_agent/: __init__.py  agent.py
